// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: success, isDisabled: false, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-frosted-soft);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-success);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-success);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 1 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 1 2`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 2 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 3 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and length: 5 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-primary);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: true and length: 6 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  pointer-events: none;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 1 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 2 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 3 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 4 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 5 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and length: 5 2`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 0.64285714;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: not-allowed;
  text-align: center;
  opacity: 0.4;
}
input:focus-visible {
  border-color: var(--p-color-primary);
}
@media (forced-colors: active) {
  input {
    opacity: 1;
    color: GrayText;
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and length: 6 1`] = `
":host {
  display: block;
  --p-internal-pin-code-scaling: 1;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  margin-inline-start: 4px;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  display: block;
  width: auto;
  min-width: calc(1ch + calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px) * 2 + 1px * 2);
  max-width: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  height: calc(var(--p-internal-pin-code-scaling) * 3.5rem);
  padding: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
  box-sizing: border-box;
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  text-overflow: ellipsis;
  cursor: text;
  text-align: center;
}
input:focus-visible {
  border-color: var(--p-color-error);
}
@media(hover:hover) {
  input:hover {
    border-color: var(--p-color-error);
  }
}

.root {
  all: unset;
  display: grid;
  gap: 4px;
}
.wrapper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  justify-self: flex-start;
  gap: calc(11.2px * (var(--p-internal-pin-code-scaling) - 0.64285714) + 4px);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
